Fixes #2010: DCF: Update DN each time DCF is generated. Submitted by Frank
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2488 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -3912,8 +3912,8 @@ question_to_site = Question to Site
 response_from_site = Response from Site
 dcf_visit = Visit
 dcf_investigators_signature = Investigator's Signature
-dcf_dm_use_only = DM USE ONLY
-dcf_dm_signature = DM Signature
+dcf_dm_use_only = DATA MANAGER USE ONLY
+dcf_dm_signature = Data Manager Signature
 dcf_no_db_change = No DB Change
 dcf_db_change = DB Change
 dcf_allow_discrepancy_correction_forms = Allow Discrepancy Correction Forms?
@@ -3929,3 +3929,6 @@ dcf_generation_failed = DCF generation failed. Please contact your System Admini
 dcf_generation_failed_details = DCF generation failed. Details: {0}
 dcf_generation_email_failed = DCF generation did not complete due to email sending failure. Please contact your System Administrator.
 dcf_email_subject_multiple = DCF: Multiple DCFs
+dcf_saved = Saved
+dcf_printed = Printed
+dcf_emailed = Emailed
