--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
@@ -7356,12 +7356,12 @@ dcf_visit = \u0412\u0438\u0437\u0438\u0442
 #dcf_investigators_signature = Investigator's Signature
 #dcf_investigators_signature = Подпись исследователя
 dcf_investigators_signature = \u041f\u043e\u0434\u043f\u0438\u0441\u044c \u0438\u0441\u0441\u043b\u0435\u0434\u043e\u0432\u0430\u0442\u0435\u043b\u044f
-#dcf_dm_use_only = DM USE ONLY
-#dcf_dm_use_only = Только для МД
-dcf_dm_use_only = \u0422\u043e\u043b\u044c\u043a\u043e \u0434\u043b\u044f \u041c\u0414
-#dcf_dm_signature = DM Signature
-#dcf_dm_signature = Подпись МД
-dcf_dm_signature = \u041f\u043e\u0434\u043f\u0438\u0441\u044c \u041c\u0414
+#dcf_dm_use_only = DATA MANGER USE ONLY
+#dcf_dm_use_only = Только для Менеджера данных
+dcf_dm_use_only = \u0422\u043e\u043b\u044c\u043a\u043e \u0434\u043b\u044f \u041c\u0435\u043d\u0435\u0434\u0436\u0435\u0440\u0430 \u0434\u0430\u043d\u043d\u044b\u0445
+#dcf_dm_signature = Data Manager Signature
+#dcf_dm_signature = Подпись Менеджера данных
+dcf_dm_signature = \u041f\u043e\u0434\u043f\u0438\u0441\u044c \u041c\u0435\u043d\u0435\u0434\u0436\u0435\u0440\u0430 \u0434\u0430\u043d\u043d\u044b\u0445
 #dcf_no_db_change = No DB Change
 #dcf_no_db_change = Без изменений БД
 dcf_no_db_change = \u0411\u0435\u0437 \u0438\u0437\u043c\u0435\u043d\u0435\u043d\u0438\u0439 \u0411\u0414
@@ -7407,3 +7407,12 @@ dcf_generation_email_failed = \u0421\u043e\u0437\u0434\u0430\u043d\u0438\u0435 \
 #dcf_email_subject_multiple = DCF: Multiple DCFs
 #dcf_email_subject_multiple = ФКЗ: Множественные ФКЗ
 dcf_email_subject_multiple = \u0424\u041a\u0417\u003a \u041c\u043d\u043e\u0436\u0435\u0441\u0442\u0432\u0435\u043d\u043d\u044b\u0435 \u0424\u041a\u0417
+#dcf_saved = Saved
+#dcf_saved = Сохранено
+dcf_saved  = \u0421\u043e\u0445\u0440\u0430\u043d\u0435\u043d\u043e
+#dcf_printed = Printed
+#dcf_printed = Отпечатано
+dcf_printed = \u041e\u0442\u043f\u0435\u0447\u0430\u0442\u0430\u043d\u043e
+#dcf_emailed = Emailed
+#dcf_emailed = Отправлено
+dcf_emailed = \u041e\u0442\u043f\u0440\u0430\u0432\u043b\u0435\u043d\u043e
