Fixes #2074: Add medical coding eCRF validation. Submitted by Vitaly
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2530 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/page_messages_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/page_messages_en.properties
@@ -1366,3 +1366,6 @@ dcf_email_please_review = Please review the attached file.
 
 print_CRF_Message_at_Loading = Depending on the size of your data,<br />this process may take several minutes.
 error_print_CRF_Message_at_Loading = There is an issue in a CRF which is causing the printCRF page not to populate. Error message:
+please_specify_correct_ontology_name = Please specify correct ontology name or reference item name
+please_update_coding_item_type_to_code = Please update coding item type to CODE
+please_update_medical_coding_reference_item_type = Please update medical coding reference item type to ST
