--- a/core/src/main/resources/org/akaza/openclinica/i18n/page_messages_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/page_messages_ru.properties
@@ -2359,3 +2359,13 @@ print_CRF_Message_at_Loading = \u0412 \u0437\u0430\u0432\u0438\u0441\u0438\u043c
 #error_print_CRF_Message_at_Loading = There is an issue in a CRF which is causing the printCRF page not to populate. Error message:
 #error_print_CRF_Message_at_Loading = Причина в ИРК, которая выслава ошибку подготовки к печати. Текст ошибки:
 error_print_CRF_Message_at_Loading = \u041f\u0440\u0438\u0447\u0438\u043d\u0430 \u0432 \u0418\u0420\u041a\u002c \u043a\u043e\u0442\u043e\u0440\u0430\u044f \u0432\u044b\u0441\u043b\u0430\u0432\u0430 \u043e\u0448\u0438\u0431\u043a\u0443 \u043f\u043e\u0434\u0433\u043e\u0442\u043e\u0432\u043a\u0438 \u043a \u043f\u0435\u0447\u0430\u0442\u0438\u002e \u0422\u0435\u043a\u0441\u0442 \u043e\u0448\u0438\u0431\u043a\u0438\u003a
+
+#please_specify_correct_ontology_name = Please specify correct ontology name or reference item name
+#please_specify_correct_ontology_name = Пожалуйста, укажите правильное название словаря или имя ссылочного элемента
+please_specify_correct_ontology_name = \u041f\u043e\u0436\u0430\u043b\u0443\u0439\u0441\u0442\u0430\u002c \u0443\u043a\u0430\u0436\u0438\u0442\u0435 \u043f\u0440\u0430\u0432\u0438\u043b\u044c\u043d\u043e\u0435 \u043d\u0430\u0437\u0432\u0430\u043d\u0438\u0435 \u0441\u043b\u043e\u0432\u0430\u0440\u044f \u0438\u043b\u0438 \u0438\u043c\u044f \u0441\u0441\u044b\u043b\u043e\u0447\u043d\u043e\u0433\u043e \u044d\u043b\u0435\u043c\u0435\u043d\u0442\u0430
+#please_update_coding_item_type_to_code = Please update coding item type to CODE
+#please_update_coding_item_type_to_code = Пожалуйста, обновите тип элемента на CODE
+please_update_coding_item_type_to_code = \u041f\u043e\u0436\u0430\u043b\u0443\u0439\u0441\u0442\u0430\u002c \u043e\u0431\u043d\u043e\u0432\u0438\u0442\u0435 \u0442\u0438\u043f \u044d\u043b\u0435\u043c\u0435\u043d\u0442\u0430 \u043d\u0430 \u0043\u004f\u0044\u0045
+#please_update_medical_coding_reference_item_type = Please update medical coding reference item type to ST
+#please_update_medical_coding_reference_item_type = Пожалуйста, обновите тип ссылочного элемента на ST
+please_update_medical_coding_reference_item_type = \u041f\u043e\u0436\u0430\u043b\u0443\u0439\u0441\u0442\u0430\u002c \u043e\u0431\u043d\u043e\u0432\u0438\u0442\u0435 \u0442\u0438\u043f \u0441\u0441\u044b\u043b\u043e\u0447\u043d\u043e\u0433\u043e \u044d\u043b\u0435\u043c\u0435\u043d\u0442\u0430 \u043d\u0430 \u0053\u0054
