Fixes #1878: Return storage allocation per study. Submitted by sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2532 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -2882,7 +2882,7 @@ import_job_name=Import Job Name
 import_job_desc=Import Job Description
 import_job_study=Import Job Study
 the_default_filepath=The default filepath to import from will be this location
-you_can_create_a_new_directory=You can create a new directory here, <br/>or leave it blank to take files from the root directory
+you_can_create_a_new_directory=You can create a new directory here, <br/>or leave it blank to take files from the [root directory]\\[parent study oid]
 frequency=Frequency
 run_every=Run every
 hours_and=hours and
