--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -3477,7 +3477,7 @@ systemProperty.assignRandomizationResultTo.dngroup.radioLabel=Dynamic Group
 systemProperty.assignRandomizationResultTo.ssid.radioLabel=Study Subject ID
 systemProperty.assignRandomizationResultTo.none.radioLabel=Neither
 
-systemProperty.randomizationEnviroment.label=Randomization Enviroment
+systemProperty.randomizationEnviroment.label=Randomization Environment
 systemProperty.randomizationEnviroment.description=
 systemProperty.randomizationEnviroment.prod.radioLabel=Production
 systemProperty.randomizationEnviroment.test.radioLabel=Test
