Fixed #2100: Change System I18N properties to show full language names, not codes Submitted by: sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2553 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -3471,6 +3471,11 @@ systemProperty.logo.description=Upload your logo.  Must be .JPEG file with a max
 systemProperty.system.language.label=Interface language
 systemProperty.system.language.description=This property specifies the interface language.
 
+system.language.en.translation=English
+system.language.ru.translation=Russian
+system.language.zh.translation=Chinese
+system.language.es_MX.translation=Spanish (Latin America)
+
 systemProperty.assignRandomizationResultTo.label=Assign randomization result to
 systemProperty.assignRandomizationResultTo.description=
 systemProperty.assignRandomizationResultTo.dngroup.radioLabel=Dynamic Group
