--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
@@ -6125,6 +6125,16 @@ systemProperty.logo.description = \u0417\u0430\u0433\u0440\u0443\u0437\u0438\u04
 systemProperty.system.language.label=\u042F\u0437\u044B\u043A \u0438\u043D\u0442\u0435\u0440\u0444\u0435\u0439\u0441\u0430
 #systemProperty.system.language.description=This property specifies the interface language.
 #systemProperty.system.language.description=Этот параметр определяет язык интерфейса
+#system.language.en.translation=English
+#system.language.en.translation=Английский
+system.language.en.translation=\u0410\u043D\u0433\u043B\u0438\u0439\u0441\u043A\u0438\u0439
+#system.language.ru.translation=Russian
+#system.language.ru.translation=Русский
+system.language.ru.translation=\u0420\u0443\u0441\u0441\u043A\u0438\u0439
+#system.language.zh.translation=Chinese
+#system.language.zh.translation=Китайский
+system.language.zh.translation=\u041A\u0438\u0442\u0430\u0439\u0441\u043A\u0438\u0439
+system.language.es_MX.translation=Spanish (Latin America)
 systemProperty.system.language.description=\u042D\u0442\u043E\u0442 \u043F\u0430\u0440\u0430\u043C\u0435\u0442\u0440 \u043E\u043F\u0440\u0435\u0434\u0435\u043B\u044F\u0435\u0442 \u044F\u0437\u044B\u043A \u0438\u043D\u0442\u0435\u0440\u0444\u0435\u0439\u0441\u0430
 #systemProperty.assignRandomizationResultTo.label = Assign randomization result to
 #systemProperty.assignRandomizationResultTo.label = Назначить результат рандомизации
