Fixes #2114: Change tabbing order in repeating rows in CRFs during data entry. Submitted by sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2558 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -3106,6 +3106,10 @@ autoCreateSubjectDuringImport=Auto-create subject during import?
 
 allowSdvWithOpenQueries=Allow SDV With Open Queries?
 
+crfTabbingMode=Tabbing inside tables
+leftToRight=Left to Right
+topToBottom=Top to Bottom
+
 replaceExisitingDataDuringImport=Replace existing data during import?
 
 days_after_it_was_last_used = days after it was last used
