--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
@@ -5201,6 +5201,15 @@ autoCreateSubjectDuringImport = \u0421\u043e\u0437\u0434\u0430\u0442\u044c \u044
 #allowSdvWithOpenQueries = Allow SDV With Open Queries?
 #allowSdvWithOpenQueries = Разрешить SDV при открытых запросах?
 allowSdvWithOpenQueries = \u0420\u0430\u0437\u0440\u0435\u0448\u0438\u0442\u044c \u0053\u0044\u0056 \u043f\u0440\u0438 \u043e\u0442\u043a\u0440\u044b\u0442\u044b\u0445 \u0437\u0430\u043f\u0440\u043e\u0441\u0430\u0445\u003f
+#crfTabbingMode=Tabbing inside tables
+#crfTabbingMode=Табуляция в таблицах
+crfTabbingMode=\u0422\u0430\u0431\u0443\u043B\u044F\u0446\u0438\u044F \u0432 \u0442\u0430\u0431\u043B\u0438\u0446\u0430\u0445
+#leftToRight=Left to Right
+#leftToRight=Слева на Право
+leftToRight=\u0421\u043B\u0435\u0432\u0430 \u043D\u0430 \u041F\u0440\u0430\u0432\u043E
+#topToBottom=Top to Bottom
+#topToBottom=Сверху Вниз
+topToBottom=\u0421\u0432\u0435\u0440\u0445\u0443 \u0412\u043D\u0438\u0437
 #replaceExisitingDataDuringImport = Replace existing data during import?
 #replaceExisitingDataDuringImport = Заместить существующие данные во время импорта?
 replaceExisitingDataDuringImport = \u0417\u0430\u043c\u0435\u0441\u0442\u0438\u0442\u044c \u0441\u0443\u0449\u0435\u0441\u0442\u0432\u0443\u044e\u0449\u0438\u0435 \u0434\u0430\u043d\u043d\u044b\u0435 \u0432\u043e \u0432\u0440\u0435\u043c\u044f \u0438\u043c\u043f\u043e\u0440\u0442\u0430\u003f
