Fixes #2127: Infinity loading using direct casebook hyperlink. Submitted by Vitaly
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2565 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -4008,3 +4008,8 @@ case_report_form = Case Report Forms
 dcf_saved = Saved
 dcf_printed = Printed
 dcf_emailed = Emailed
+subject_site_assignment=Subject Site Assignment
+subject_group_assignment=Subject Group Assignment
+study_event_deleted=Study Event deleted
+
+
