--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
@@ -7528,12 +7528,12 @@ study_event_end_date_changed = \u0421\u043e\u0431\u044b\u0442\u0438\u0435 \u0438
 #study_event_location_changed = Study Event location changed
 #study_event_location_changed = Расположение события было изменно
 study_event_location_changed = \u0420\u0430\u0441\u043f\u043e\u043b\u043e\u0436\u0435\u043d\u0438\u0435 \u0441\u043e\u0431\u044b\u0442\u0438\u044f \u0431\u044b\u043b\u043e \u0438\u0437\u043c\u0435\u043d\u0435\u043d\u043e
-#subject_Site_Assignment = Subject Site Assignment
-#subject_Site_Assignment = Субъект был привязан к центру
-subject_site_Assignment = \u0421\u0443\u0431\u044a\u0435\u043a\u0442 \u0431\u044b\u043b \u043f\u0440\u0438\u0432\u044f\u0437\u0430\u043d \u043a \u0446\u0435\u043d\u0442\u0440\u0443
-#subject_Group_Assignment = Subject Group Assignment
-#subject_Group_Assignment = Назначение субъекта группы
-subject_group_Assignment = \u041d\u0430\u0437\u043d\u0430\u0447\u0435\u043d\u0438\u0435 \u0441\u0443\u0431\u044a\u0435\u043a\u0442\u0430 \u0433\u0440\u0443\u043f\u043f\u044b
+#subject_site_assignment = Subject Site Assignment
+#subject_site_assignment = Субъект был привязан к центру
+subject_site_assignment = \u0421\u0443\u0431\u044a\u0435\u043a\u0442 \u0431\u044b\u043b \u043f\u0440\u0438\u0432\u044f\u0437\u0430\u043d \u043a \u0446\u0435\u043d\u0442\u0440\u0443
+#subject_group_assignment = Subject Group Assignment
+#subject_group_assignment = Назначение субъекта группы
+subject_group_assignment = \u041d\u0430\u0437\u043d\u0430\u0447\u0435\u043d\u0438\u0435 \u0441\u0443\u0431\u044a\u0435\u043a\u0442\u0430 \u0433\u0440\u0443\u043f\u043f\u044b
 #subject_Group_changed = Subject Group changed
 #subject_Group_changed = Группа субъекта был изменена
 subject_group_changed = \u0413\u0440\u0443\u043f\u043f\u0430 \u0441\u0443\u0431\u044a\u0435\u043a\u0442\u0430 \u0431\u044b\u043b \u0438\u0437\u043c\u0435\u043d\u0435\u043d\u0430
@@ -7626,3 +7626,11 @@ dcf_printed = \u041e\u0442\u043f\u0435\u0447\u0430\u0442\u0430\u043d\u043e
 #dcf_emailed = Emailed
 #dcf_emailed = Отправлено
 dcf_emailed = \u041e\u0442\u043f\u0440\u0430\u0432\u043b\u0435\u043d\u043e
+#study_event_deleted = Study Event deleted
+#study_event_deleted = Событие исследования удалено
+study_event_deleted = \u0421\u043e\u0431\u044b\u0442\u0438\u0435 \u0438\u0441\u0441\u043b\u0435\u0434\u043e\u0432\u0430\u043d\u0438\u044f \u0443\u0434\u0430\u043b\u0435\u043d\u043e
+#study_event_source_data_verified = Study Event source data verified
+#study_event_source_data_verified = Событие исследования прошло SDV
+study_event_source_data_verified = \u0421\u043e\u0431\u044b\u0442\u0438\u0435 \u0438\u0441\u0441\u043b\u0435\u0434\u043e\u0432\u0430\u043d\u0438\u044f \u043f\u0440\u043e\u0448\u043b\u043e \u0053\u0044\u0056
+#item_data_skipped = Item data value skipped
+#item_data_skipped = Значение переменной пропущено
