--- a/core/src/main/resources/org/akaza/openclinica/i18n/page_messages_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/page_messages_ru.properties
@@ -1744,9 +1744,9 @@ section_label_length_error = \u041d\u0430\u0437\u0432\u0430\u043d\u0438\u0435 \u
 #section_title_length_error = Section title can not be more than 2000 characters
 #section_title_length_error = Заголовок раздела ИРК не может быть более 2000 знаков.
 section_title_length_error = \u0417\u0430\u0433\u043e\u043b\u043e\u0432\u043e\u043a \u0440\u0430\u0437\u0434\u0435\u043b\u0430 \u0418\u0420\u041a \u043d\u0435 \u043c\u043e\u0436\u0435\u0442 \u0431\u044b\u0442\u044c \u0431\u043e\u043b\u0435\u0435 \u0032\u0030\u0030\u0030 \u0437\u043d\u0430\u043a\u043e\u0432\u002e
-#section_subtitle_length_error = Section subtitle can not be more than 2000 characters
-#section_subtitle_length_error = Подзаголовок раздела ИРК не может быть более 2000 знаков.
-section_subtitle_length_error = \u041f\u043e\u0434\u0437\u0430\u0433\u043e\u043b\u043e\u0432\u043e\u043a \u0440\u0430\u0437\u0434\u0435\u043b\u0430 \u0418\u0420\u041a \u043d\u0435 \u043c\u043e\u0436\u0435\u0442 \u0431\u044b\u0442\u044c \u0431\u043e\u043b\u0435\u0435 \u0032\u0030\u0030\u0030 \u0437\u043d\u0430\u043a\u043e\u0432\u002e
+#section_subtitle_length_error = Section subtitle can not be more than 10000 characters
+#section_subtitle_length_error = Подзаголовок раздела ИРК не может быть более 10000 знаков.
+section_subtitle_length_error = \u041f\u043e\u0434\u0437\u0430\u0433\u043e\u043b\u043e\u0432\u043e\u043a \u0440\u0430\u0437\u0434\u0435\u043b\u0430 \u0418\u0420\u041a \u043d\u0435 \u043c\u043e\u0436\u0435\u0442 \u0431\u044b\u0442\u044c \u0431\u043e\u043b\u0435\u0435 \u0031\u0030\u0030\u0030\u0030 \u0437\u043d\u0430\u043a\u043e\u0432\u002e
 #section_instruction_length_error = Section instruction can not be more than 10000 characters
 #section_instruction_length_error = Инструкция  раздела ИРК не может быть более 10000 знаков.
 section_instruction_length_error = \u0418\u043d\u0441\u0442\u0440\u0443\u043a\u0446\u0438\u044f  \u0440\u0430\u0437\u0434\u0435\u043b\u0430 \u0418\u0420\u041a \u043d\u0435 \u043c\u043e\u0436\u0435\u0442 \u0431\u044b\u0442\u044c \u0431\u043e\u043b\u0435\u0435 \u0031\u0030\u0030\u0030\u0030 \u0437\u043d\u0430\u043a\u043e\u0432\u002e
