Fixes #2126: Insert Rule doesn't change status of CRFSubmitted by Aram
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2574 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/notes_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/notes_en.properties
@@ -175,6 +175,8 @@ currently_no_subjects = (currently no subjects)
 
 currently_no_users = (currently no users)
 
+data_auto_inserted_by_rule = Data auto-inserted by rule
+
 data_extraction_filtering_and_analisys = Data extraction, filtering, and analysis
 
 data_submission_validation_annotation = Data submission, validation, and annotation
