--- a/core/src/main/resources/org/akaza/openclinica/i18n/notes_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/notes_ru.properties
@@ -267,6 +267,9 @@ currently_no_subjects =  \u0028\u0432 \u043d\u0430\u0441\u0442\u043e\u044f\u0449
 #currently_no_users =  (currently no users)
 #currently_no_users =  (в настоящий момент отсутствуют пользователи)
 currently_no_users =  \u0028\u0432 \u043d\u0430\u0441\u0442\u043e\u044f\u0449\u0438\u0439 \u043c\u043e\u043c\u0435\u043d\u0442 \u043e\u0442\u0441\u0443\u0442\u0441\u0442\u0432\u0443\u044e\u0442 \u043f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u0435\u043b\u0438\u0029
+#data_auto_inserted_by_rule = Data auto-inserted by rule
+#data_auto_inserted_by_rule = Данные автоматически обновлены правилом
+data_auto_inserted_by_rule = \u0414\u0430\u043d\u043d\u044b\u0435 \u0430\u0432\u0442\u043e\u043c\u0430\u0442\u0438\u0447\u0435\u0441\u043a\u0438 \u043e\u0431\u043d\u043e\u0432\u043b\u0435\u043d\u044b \u043f\u0440\u0430\u0432\u0438\u043b\u043e\u043c
 #data_extraction_filtering_and_analisys =  Data extraction, filtering, and analysis
 #data_extraction_filtering_and_analisys = Извлечение данных, фильтрование и анализ
 data_extraction_filtering_and_analisys = \u0418\u0437\u0432\u043b\u0435\u0447\u0435\u043d\u0438\u0435 \u0434\u0430\u043d\u043d\u044b\u0445\u002c \u0444\u0438\u043b\u044c\u0442\u0440\u043e\u0432\u0430\u043d\u0438\u0435 \u0438 \u0430\u043d\u0430\u043b\u0438\u0437
