Fixed #2013: Add export to PDF support Submitted by: vitaliy
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2578 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
@@ -7436,6 +7436,9 @@ viewStudySubject.casebookGenerationForm.casebookFormat = \u0043\u0061\u0073\u006
 #viewStudySubject.casebookGenerationForm.format.html = Printable HTML
 #viewStudySubject.casebookGenerationForm.format.html = HTML для печати
 viewStudySubject.casebookGenerationForm.format.html = \u0048\u0054\u004d\u004c \u0434\u043b\u044f \u043f\u0435\u0447\u0430\u0442\u0438
+#viewStudySubject.casebookGenerationForm.format.pdf = Printable PDF
+#viewStudySubject.casebookGenerationForm.format.pdf = PDF для печати
+viewStudySubject.casebookGenerationForm.format.pdf = \u0050\u0044\u0046 \u0434\u043b\u044f \u043f\u0435\u0447\u0430\u0442\u0438
 viewStudySubject.casebookGenerationForm.format.json = JSON
 viewStudySubject.casebookGenerationForm.format.xml = CDISC ODM XML
 #viewStudySubject.casebookGenerationForm.options = Options:
@@ -7515,6 +7518,9 @@ study_event_scheduled = \u0421\u043e\u0431\u044b\u0442\u0438\u0435 \u0431\u044b\
 study_event_data_entry_started = \u0411\u044b\u043b \u043f\u0440\u043e\u0438\u0437\u0432\u0435\u0434\u0435\u043d \u0432\u0432\u043e\u0434 \u0434\u0430\u043d\u043d\u044b\u0445 \u0432 \u0441\u043e\u0431\u044b\u0442\u0438\u0438
 #study_event_completed = Study Event completed
 #study_event_completed = Событие было завершено
+#study_event_source_data_verified = Study Event source data verified started
+#study_event_source_data_verified = Событие было сверено с первичной документацией
+study_event_source_data_verified = \u0421\u043e\u0431\u044b\u0442\u0438\u0435 \u0431\u044b\u043b\u043e \u0441\u0432\u0435\u0440\u0435\u043d\u043e \u0441 \u043f\u0435\u0440\u0432\u0438\u0447\u043d\u043e\u0439 \u0434\u043e\u043a\u0443\u043c\u0435\u043d\u0442\u0430\u0446\u0438\u0435\u0439
 study_event_completed = \u0421\u043e\u0431\u044b\u0442\u0438\u0435 \u0431\u044b\u043b\u043e \u0437\u0430\u0432\u0435\u0440\u0448\u0435\u043d\u043e
 #study_event_stopped = Study Event stopped
 #study_event_stopped = Событие было остановленно
@@ -7635,7 +7641,9 @@ dcf_printed = \u041e\u0442\u043f\u0435\u0447\u0430\u0442\u0430\u043d\u043e
 #dcf_emailed = Emailed
 #dcf_emailed = Отправлено
 dcf_emailed = \u041e\u0442\u043f\u0440\u0430\u0432\u043b\u0435\u043d\u043e
-#study_event_deleted = Study Event deleted
+#printable_forms = Printable Forms
+#printable_forms = Формы для печати
+printable_forms = \u0424\u043e\u0440\u043c\u044b \u0434\u043b\u044f \u043f\u0435\u0447\u0430\u0442\u0438#study_event_deleted = Study Event deleted
 #study_event_deleted = Событие исследования удалено
 study_event_deleted = \u0421\u043e\u0431\u044b\u0442\u0438\u0435 \u0438\u0441\u0441\u043b\u0435\u0434\u043e\u0432\u0430\u043d\u0438\u044f \u0443\u0434\u0430\u043b\u0435\u043d\u043e
 #study_event_source_data_verified = Study Event source data verified
