--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -3941,6 +3941,7 @@ dcf_email_subject_multiple = DCF: Multiple DCFs
 viewStudySubject.casebookGenerationForm.title = Subject Casebook
 viewStudySubject.casebookGenerationForm.casebookFormat = Casebook Format:
 viewStudySubject.casebookGenerationForm.format.html = Printable HTML
+viewStudySubject.casebookGenerationForm.format.pdf = Printable PDF
 viewStudySubject.casebookGenerationForm.format.json = JSON
 viewStudySubject.casebookGenerationForm.format.xml = CDISC ODM XML
 viewStudySubject.casebookGenerationForm.options = Options:
@@ -4012,6 +4013,7 @@ case_report_form = Case Report Forms
 dcf_saved = Saved
 dcf_printed = Printed
 dcf_emailed = Emailed
+printable_forms = Printable Forms
 subject_site_assignment=Subject Site Assignment
 subject_group_assignment=Subject Group Assignment
 study_event_deleted=Study Event deleted
