Fixed #2141: Implement the study parameter for autotabbing. Submitted by: sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2579 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -3106,6 +3106,7 @@ autoCreateSubjectDuringImport=Auto-create subject during import?
 
 allowSdvWithOpenQueries=Allow SDV With Open Queries?
 
+useAutoTabbing=Use autotabbing
 crfTabbingMode=Tabbing inside tables
 leftToRight=Left to Right
 topToBottom=Top to Bottom
