--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
@@ -5201,6 +5201,9 @@ autoCreateSubjectDuringImport = \u0421\u043e\u0437\u0434\u0430\u0442\u044c \u044
 #allowSdvWithOpenQueries = Allow SDV With Open Queries?
 #allowSdvWithOpenQueries = Разрешить SDV при открытых запросах?
 allowSdvWithOpenQueries = \u0420\u0430\u0437\u0440\u0435\u0448\u0438\u0442\u044c \u0053\u0044\u0056 \u043f\u0440\u0438 \u043e\u0442\u043a\u0440\u044b\u0442\u044b\u0445 \u0437\u0430\u043f\u0440\u043e\u0441\u0430\u0445\u003f
+#useAutoTabbing=Use autotabbing
+#useAutoTabbing=Использовать автотабуляцию
+useAutoTabbing=\u0418\u0441\u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u044C \u0430\u0432\u0442\u043E\u0442\u0430\u0431\u0443\u043B\u044F\u0446\u0438\u044E
 #crfTabbingMode=Tabbing inside tables
 #crfTabbingMode=Табуляция в таблицах
 crfTabbingMode=\u0422\u0430\u0431\u0443\u043B\u044F\u0446\u0438\u044F \u0432 \u0442\u0430\u0431\u043B\u0438\u0446\u0430\u0445
