Fixes #164: Save & Next CRF button in the CRF data entry page. Submitted by Frank
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2587 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -1882,6 +1882,8 @@ save_and_define_scope = Save and Define Scope
 
 save_and_export = Save And Export
 
+save_and_next = Save & Next CRF
+
 save_filter = Save Filter
 
 schedule = Schedule
