--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
@@ -2834,6 +2834,9 @@ save_and_define_scope = \u0421\u043e\u0445\u0440\u0430\u043d\u0438\u0442\u044c \
 #save_and_export =  Save And Export
 #save_and_export = Сохранить и экспортировать
 save_and_export = \u0421\u043e\u0445\u0440\u0430\u043d\u0438\u0442\u044c \u0438 \u044d\u043a\u0441\u043f\u043e\u0440\u0442\u0438\u0440\u043e\u0432\u0430\u0442\u044c
+#save_and_next = Save & Next CRF
+#save_and_next = Сохранить и След. ИРК
+save_and_next = \u0421\u043e\u0445\u0440\u0430\u043d\u0438\u0442\u044c \u0438 \u0421\u043b\u0435\u0434\u002e \u0418\u0420\u041a
 #save_filter =  Save Filter
 #save_filter = Сохранить фильтр
 save_filter = \u0421\u043e\u0445\u0440\u0430\u043d\u0438\u0442\u044c \u0444\u0438\u043b\u044c\u0442\u0440
