Fixes #2140: User is unable to delete CRF version if rules exist for this CRF. Submitted by Denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2589 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -3706,6 +3706,7 @@ confirm_deletion_of_crf_version = Confirm Deletion of CRF Version
 this_crf_version_has_associated_data = This CRF Version has associated data that is preventing its deletion.
 this_crf_version_has_no_conflict_data = This CRF Version has no conflicting data, and can be deleted.  Please click 'Submit' to complete the operation.
 the_crf_version_has_been_removed = The CRF Version has been successfully removed
+you_are_trying_to_delete_last_version = You are trying to delete the last version of a CRF, and there is metadata at the CRF level that is preventing the delete. Please try to delete from the CRF level to review this metadata.
 
 crfEvaluationTable.crfName=CRF Name
 crfEvaluationTable.studySubjectId=Study Subject ID
