Fixes #2033: Create CRFs Masking page. Submitted by denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2590 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -28,6 +28,12 @@ CRF_description = CRF Description
 
 CRF_info = CRF Header Info
 
+crfs_masking = CRFs Masking
+
+crfs_masking_for = CRFs Masking for
+
+crf_masking_success = The CRF Masking preferences have been changed successfully for user
+
 More_info = More Info
 
 CRF_name = CRF Name
@@ -1381,6 +1387,8 @@ mark_complete = Mark Complete
 mark_this_CRF_complete = Mark this CRF complete
 
 masking = Masking
+
+mask_this_crf = Mask this CRF
 
 max_repeats = Max Repeats
 
