Fixes #2178: Create Study parameter to select calendar style. Submitted by denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2607 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -169,6 +169,8 @@ SPSS_syntax_and_data = SPSS Syntax and Data
 
 September = September
 
+show_years_in_calendar = Show Year in the Calendar
+
 To = To
 
 UNK = UNK
