--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
@@ -250,6 +250,9 @@ SPSS_syntax_and_data  = SPSS \u0421\u0438\u043d\u0442\u0430\u043a\u0441\u0438\u0
 #September  =  September
 #September  = Сентябрь
 September  = \u0421\u0435\u043d\u0442\u044f\u0431\u0440\u044c
+#show_years_in_calendar = Show Year in the Calendar
+#show_years_in_calendar = Отображать год в календаре
+show_years_in_calendar = \u041e\u0442\u043e\u0431\u0440\u0430\u0436\u0430\u0442\u044c \u0433\u043e\u0434 \u0432 \u043a\u0430\u043b\u0435\u043d\u0434\u0430\u0440\u0435
 #To  =  To
 #To  = К
 To  = \u041a
