Fixes #2217: Add new system parameter for bioontology username. Submitted by vitaly
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2635 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -4031,5 +4031,5 @@ printable_forms = Printable Forms
 subject_site_assignment=Subject Site Assignment
 subject_group_assignment=Subject Group Assignment
 study_event_deleted=Study Event deleted
-
+systemProperty.bioontologyUsername.label = Bioontology user name
 
