--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
@@ -7672,8 +7672,8 @@ dcf_emailed = \u041e\u0442\u043f\u0440\u0430\u0432\u043b\u0435\u043d\u043e
 printable_forms = \u0424\u043e\u0440\u043c\u044b \u0434\u043b\u044f \u043f\u0435\u0447\u0430\u0442\u0438#study_event_deleted = Study Event deleted
 #study_event_deleted = Событие исследования удалено
 study_event_deleted = \u0421\u043e\u0431\u044b\u0442\u0438\u0435 \u0438\u0441\u0441\u043b\u0435\u0434\u043e\u0432\u0430\u043d\u0438\u044f \u0443\u0434\u0430\u043b\u0435\u043d\u043e
-#study_event_source_data_verified = Study Event source data verified
-#study_event_source_data_verified = Событие исследования прошло SDV
-study_event_source_data_verified = \u0421\u043e\u0431\u044b\u0442\u0438\u0435 \u0438\u0441\u0441\u043b\u0435\u0434\u043e\u0432\u0430\u043d\u0438\u044f \u043f\u0440\u043e\u0448\u043b\u043e \u0053\u0044\u0056
 #item_data_skipped = Item data value skipped
 #item_data_skipped = Значение переменной пропущено
+#systemProperty.bioontologyUsername.label = Bioontology user name
+#systemProperty.bioontologyUsername.label = Пользователь Bioontology
+systemProperty.bioontologyUsername.label = \u041f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u0435\u043b\u044c Bioontology
