Fixes #2110: Disable CRF Masking for Investigator and System Admin user roles. Submitted by denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2642 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -34,6 +34,8 @@ crfs_masking_for = CRFs Masking for
 
 crf_masking_success = The CRF Masking preferences have been changed successfully for user
 
+masking_disabled_for_investigator = Masking is disabled for users with "Investigator" role.
+
 More_info = More Info
 
 CRF_name = CRF Name
