--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
@@ -88,6 +88,10 @@ crfs_masking_for = \u041c\u0430\u0441\u043a\u0438\u0440\u043e\u0432\u0430\u043d\
 #crf_masking_success = The CRF Masking preferences have been changed successfully for user
 #crf_masking_success = Настройки Маскирования ИРК были успешно изменены для пользователя
 crf_masking_success = \u041d\u0430\u0441\u0442\u0440\u043e\u0439\u043a\u0438 \u041c\u0430\u0441\u043a\u0438\u0440\u043e\u0432\u0430\u043d\u0438\u044f \u0418\u0420\u041a \u0431\u044b\u043b\u0438 \u0443\u0441\u043f\u0435\u0448\u043d\u043e \u0438\u0437\u043c\u0435\u043d\u0435\u043d\u044b \u0434\u043b\u044f \u043f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u0435\u043b\u044f
+#masking_disabled_for_investigator = Masking is disabled for users with "Investigator" role.
+#masking_disabled_for_investigator = Маскирование отключено для пользователей с ролью "Исследователь".
+masking_disabled_for_investigator = \u041c\u0430\u0441\u043a\u0438\u0440\u043e\u0432\u0430\u043d\u0438\u0435 \u043e\u0442\u043a\u043b\u044e\u0447\u0435\u043d\u043e \u0434\u043b\u044f \u043f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u0435\u043b\u0435\u0439 \u0441 \u0440\u043e\u043b\u044c\u044e \u0022\u0418\u0441\u0441\u043b\u0435\u0434\u043e\u0432\u0430\u0442\u0435\u043b\u044c\u0022\u002e
+
 #Currently_entering_data  =  is currently entering data.
 #Currently_entering_data  = в настоящий момент производит ввод данных.
 Currently_entering_data  = \u0432 \u043d\u0430\u0441\u0442\u043e\u044f\u0449\u0438\u0439 \u043c\u043e\u043c\u0435\u043d\u0442 \u043f\u0440\u043e\u0438\u0437\u0432\u043e\u0434\u0438\u0442 \u0432\u0432\u043e\u0434 \u0434\u0430\u043d\u043d\u044b\u0445\u002e
