Fixes #2092: Default CRF version is not included in Site Event definition. Submitted by Sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2654 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -2805,6 +2805,7 @@ Signed = Signed
 date_time_of_server = Date/Time of Server
 
 hidden_crf=Hide CRF
+acceptNewCrfVersions=Accept New CRF Versions For Sites
 crf_is_hidden=The CRF is hidden
 
 studies_using_crf=Studies Using This CRF For Data Entry
