--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
@@ -4359,6 +4359,9 @@ date_time_of_server = \u0421\u0435\u0440\u0432\u0435\u0440\u043d\u0430\u044f \u0
 #hidden_crf = Hide CRF
 #hidden_crf = Скрыть ИРК
 hidden_crf = \u0421\u043a\u0440\u044b\u0442\u044c \u0418\u0420\u041a
+#acceptNewCrfVersions=Accept New CRF Versions For Sites
+#acceptNewCrfVersions=Принимать новые версии ИРК для центров
+acceptNewCrfVersions=\u041F\u0440\u0438\u043D\u0438\u043C\u0430\u0442\u044C \u043D\u043E\u0432\u044B\u0435 \u0432\u0435\u0440\u0441\u0438\u0438 \u0418\u0420\u041A \u0434\u043B\u044F \u0446\u0435\u043D\u0442\u0440\u043E\u0432
 #crf_is_hidden = The CRF is hidden
 #crf_is_hidden = ИРК скрыта
 crf_is_hidden = \u0418\u0420\u041a \u0441\u043a\u0440\u044b\u0442\u0430
