Fixes #2035: Implement Masking functionality for Start Data Entry logic. Submitted by denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2658 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -1454,6 +1454,8 @@ no = No
 
 no_CRFs = No CRFs
 
+no_crf_available = There are no CRFs available for data entry in this study event for your user role.
+
 no_crf_found_under_site = No CRF found for this Site
 
 no_event_CRFs = No Event CRFs.
