--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
@@ -2189,6 +2189,9 @@ no  = \u041d\u0435\u0442
 #no_CRFs  =  No CRFs
 #no_CRFs  = ИРК нет
 no_CRFs  = \u0418\u0420\u041a \u043d\u0435\u0442
+#no_crf_available = There are no CRFs available for data entry in this study event for your user role.
+#no_crf_available = В данном событии нет ИРК доступных для ввода данных для вашей роли пользователя.
+no_crf_available = \u0412 \u0434\u0430\u043d\u043d\u043e\u043c \u0441\u043e\u0431\u044b\u0442\u0438\u0438 \u043d\u0435\u0442 \u0418\u0420\u041a \u0434\u043e\u0441\u0442\u0443\u043f\u043d\u044b\u0445 \u0434\u043b\u044f \u0432\u0432\u043e\u0434\u0430 \u0434\u0430\u043d\u043d\u044b\u0445 \u0434\u043b\u044f \u0432\u0430\u0448\u0435\u0439 \u0440\u043e\u043b\u0438 \u043f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u0435\u043b\u044f.
 #no_crf_found_under_site  =  No CRF found for this Site
 #no_crf_found_under_site  = Для этого центра ИРК не найдены
 no_crf_found_under_site  = \u0414\u043b\u044f \u044d\u0442\u043e\u0433\u043e \u0446\u0435\u043d\u0442\u0440\u0430 \u0418\u0420\u041a \u043d\u0435 \u043d\u0430\u0439\u0434\u0435\u043d\u044b
