Fixes #2228: Delete eCRF version throws exception. Submitted by vitaly
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2688 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -4038,3 +4038,5 @@ subject_group_assignment=Subject Group Assignment
 study_event_deleted=Study Event deleted
 systemProperty.bioontologyUsername.label = Bioontology user name
 
+contains_next_items = contains next item(s):
+after_data_was_reassign = after data was reassigned from current version.
