--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
@@ -7687,3 +7687,10 @@ study_event_deleted = \u0421\u043e\u0431\u044b\u0442\u0438\u0435 \u0438\u0441\u0
 #systemProperty.bioontologyUsername.label = Bioontology user name
 #systemProperty.bioontologyUsername.label = Пользователь Bioontology
 systemProperty.bioontologyUsername.label = \u041f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u0435\u043b\u044c Bioontology
+
+#contains_next_items = contains next item(s):
+#contains_next_items = содержит следующие елементы:
+contains_next_items = \u0441\u043e\u0434\u0435\u0440\u0436\u0438\u0442 \u0441\u043b\u0435\u0434\u0443\u044e\u0449\u0438\u0435 \u0435\u043b\u0435\u043c\u0435\u043d\u0442\u044b\u003a
+#after_data_was_reassign = after data was reassigned from current version.
+#after_data_was_reassign = после переноса данных с текущей версии.
+after_data_was_reassign = \u043f\u043e\u0441\u043b\u0435 \u043f\u0435\u0440\u0435\u043d\u043e\u0441\u0430 \u0434\u0430\u043d\u043d\u044b\u0445 \u0441 \u0442\u0435\u043a\u0443\u0449\u0435\u0439 \u0432\u0435\u0440\u0441\u0438\u0438\u002e
