fixed ZH properties
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2702 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/terms_zh.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/terms_zh.properties
@@ -607,9 +607,9 @@ deleted = \u5220\u9664
 #unlock = unlock
 #unlock = 解锁
 unlock = \u89e3\u9501
-"## ClinCapture #86 ""Not Closed"" DN's status = "
-"## ClinCapture #86 ""Not Closed"" DN's status = "
-"# ClinCapture #86 ""Not Closed"" DN's status = "
+## ClinCapture #86 ""Not Closed"" DN's status =  
+## ClinCapture #86 ""Not Closed"" DN's status =  
+# ClinCapture #86 ""Not Closed"" DN's status =  
 #Not_Closed =  Not Closed
 #Not_Closed = 未关闭
 Not_Closed = \u672a\u5173\u95ed
