Fixes #2253: Emailing assigned users with Discrepancy Notes does not work. Submitted by igor
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2703 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
@@ -1402,6 +1402,9 @@ eligibility_criteria  = \u041a\u0440\u0438\u0442\u0435\u0440\u0438\u0439 \u0432\
 #email  =  Email
 #email  = Электронная почта
 email  = \u042d\u043b\u0435\u043a\u0442\u0440\u043e\u043d\u043d\u0430\u044f \u043f\u043e\u0447\u0442\u0430
+#email_service_for_DN_will_be_available_after_initial_data_saving = Email service for DN will be available after initial data saving
+#email_service_for_DN_will_be_available_after_initial_data_saving = Отправка почты с Замечанием будет доступна после сохранения данных
+email_service_for_DN_will_be_available_after_initial_data_saving = \u041e\u0442\u043f\u0440\u0430\u0432\u043a\u0430 \u043f\u043e\u0447\u0442\u044b \u0441 \u0417\u0430\u043c\u0435\u0447\u0430\u043d\u0438\u0435\u043c \u0431\u0443\u0434\u0435\u0442 \u0434\u043e\u0441\u0442\u0443\u043f\u043d\u0430 \u043f\u043e\u0441\u043b\u0435 \u0441\u043e\u0445\u0440\u0430\u043d\u0435\u043d\u0438\u044f \u0434\u0430\u043d\u043d\u044b\u0445
 #end_date  =  End Date
 #end_date  = Дата окончания
 end_date  = \u0414\u0430\u0442\u0430 \u043e\u043a\u043e\u043d\u0447\u0430\u043d\u0438\u044f
