Fixes #2191: Issues with back-button (Upload CRF version page). Submitted by denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2710 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/notes_es_MX.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/notes_es_MX.properties
@@ -646,7 +646,7 @@ the_CRF_version_you_try = La versi\u00F3n del CRF que est\u00E1 tratando de carg
 
 the_CRF_version_you_try_to_upload = La versi\u00F3n del CRF que est\u00E1 tratando de cargar ya existe en la base de datos, øest\u00E1 seguro de que quiere remover la anterior y cargarla de nuevo?
 
-the_CRF_version_you_try_to_upload_already_exists = La versi\u00F3n del CRF que est\u00E1 tratando de cargar ya existe en la base de datos y  ha sido usada por las siguientes definiciones de eventos de estudio. Por favor <a href="CreateCRFVersion?crfId={0}">regrese</a> y b\u00F3rrela de esas definiciones antes de volverla a cargar.
+the_CRF_version_you_try_to_upload_already_exists = La versi\u00F3n del CRF que est\u00E1 tratando de cargar ya existe en la base de datos y  ha sido usada por las siguientes definiciones de eventos de estudio. Por favor regrese y b\u00F3rrela de esas definiciones antes de volverla a cargar.
 
 the_filter_named = El Filtro llamado '
 
