--- a/core/src/main/resources/org/akaza/openclinica/i18n/notes_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/notes_en.properties
@@ -650,7 +650,7 @@ the_CRF_version_you_try = The CRF version you try to upload already exists in th
 
 the_CRF_version_you_try_to_upload = The CRF version you try to upload already exists in the DB, are you sure you want to remove the previous one and upload it again?
 
-the_CRF_version_you_try_to_upload_already_exists = The CRF version you try to upload already exists in the DB and has been used by following study event definitions. Please <a href="CreateCRFVersion?crfId={0}">go back</a> and remove it from those definitions before uploading it again.
+the_CRF_version_you_try_to_upload_already_exists = The CRF version you try to upload already exists in the DB and has been used by following study event definitions. Please go back and remove it from those definitions before uploading it again.
 
 the_filter_named = The Filter named '
 
