--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
@@ -7674,7 +7674,8 @@ meaning_of_signature = \u0417\u043d\u0430\u0447\u0435\u043d\u0438\u0435 \u043f\u
 case_report_form = \u042d\u043b\u0435\u043a\u0442\u0440\u043e\u043d\u043d\u0430\u044f \u0418\u043d\u0434\u0438\u0432\u0438\u0434\u0443\u0430\u043b\u044c\u043d\u0430\u044f \u041a\u0430\u0440\u0442\u0430
 #dcf_saved = Saved
 #dcf_saved = Сохранено
-dcf_saved  = \u0421\u043e\u0445\u0440\u0430\u043d\u0435\u043d\u043e#dcf_printed = Printed
+dcf_saved  = \u0421\u043e\u0445\u0440\u0430\u043d\u0435\u043d\u043e
+#dcf_printed = Printed
 #dcf_printed = Отпечатано
 dcf_printed = \u041e\u0442\u043f\u0435\u0447\u0430\u0442\u0430\u043d\u043e
 #dcf_emailed = Emailed
