Fixes #2260: Provide a user with an option to select and save his local time zone. Submitted by aram
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2727 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_zh.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_zh.properties
@@ -6608,3 +6608,7 @@ crfEvaluationTable.crfStatus = \u64cd\u4f5c
 #crfEvaluationTable.actionColumn = 操作
 crfEvaluationTable.actionColumn = \u64cd\u4f5c
 allowRulesAutoScheduling = Auto-scheduling for Insert Rules
+
+#time_zone = Time zone
+#time_zone = 时区
+time_zone = \u65f6\u533a
