--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -1,4 +1,3 @@
-
 ASKU = ASKU
 
 A_study_event_definition_describes_a_type_of_study_event = A Study Event Definition describes a type of study event that takes place during a study.
@@ -4041,3 +4040,5 @@ systemProperty.bioontologyUsername.label = Bioontology user name
 
 contains_next_items = contains next item(s):
 after_data_was_reassign = after data was reassigned from current version.
+
+time_zone = Time zone
