Fixed #2165: Generate all PDF casebooks at the site level Submitted by: vitaly
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2735 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -4040,5 +4040,6 @@ systemProperty.bioontologyUsername.label = Bioontology user name
 
 contains_next_items = contains next item(s):
 after_data_was_reassign = after data was reassigned from current version.
+print_site_casebooks = Print Site Casebooks
 
 time_zone = Time zone
