--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
@@ -7699,6 +7699,10 @@ contains_next_items = \u0441\u043e\u0434\u0435\u0440\u0436\u0438\u0442 \u0441\u0
 #after_data_was_reassign = после переноса данных с текущей версии.
 after_data_was_reassign = \u043f\u043e\u0441\u043b\u0435 \u043f\u0435\u0440\u0435\u043d\u043e\u0441\u0430 \u0434\u0430\u043d\u043d\u044b\u0445 \u0441 \u0442\u0435\u043a\u0443\u0449\u0435\u0439 \u0432\u0435\u0440\u0441\u0438\u0438\u002e
 
+#print_site_casebooks = Print Site Casebooks
+#print_site_casebooks = Комплект ИРК центра
+print_site_casebooks = \u041a\u043e\u043c\u043f\u043b\u0435\u043a\u0442 \u0418\u0420\u041a \u0446\u0435\u043d\u0442\u0440\u0430
+
 #time_zone = Time zone
 #time_zone = Часовой пояс
 time_zone = \u0427\u0430\u0441\u043e\u0432\u043e\u0439 \u043f\u043e\u044f\u0441
