Fixes #2037: Implement Masking functionality for Datasets. Submitted by denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2738 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -2334,6 +2334,10 @@ this_crf_has_data = This CRF has data. Are you sure you want to remove it?
 
 this_crf_has_data_restore = This CRF has data. Are you sure you want to restore it?
 
+this_dataset_contains_items_from_masked_crfs = This Dataset contains items from CRF masked for your user role. Masked CRF items were removed from the dataset.
+
+this_dataset_contains_items_from_masked_crfs_extract = This Dataset contains items from CRF masked for your user role. You have no permission to extract it.
+
 this_event_and_all_data_associated_with_it_in = The event and all data associated with it in this Study/Site will be removed.
 
 this_site_will_be_locked = The Site will be locked.
