Fixes #2270: Localization of timestamps of audits. Submitted by aram
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2741 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -2809,6 +2809,7 @@ signed = signed
 Signed = Signed
 # for audit logs
 date_time_of_server = Date/Time of Server
+local_date_time = Local Date/Time
 
 hidden_crf=Hide CRF
 acceptNewCrfVersions=Accept New CRF Versions For Sites
@@ -2819,6 +2820,7 @@ data_entry_started = Data Entry Started
 data_entry_started_ = data entry started
 item_status = Item Status
 server_time_info = Note that the 'Login Attempt Date field' is based on server time.  The current server time is
+local_time_info = Note that the 'Login Attempt Date field' is based on your local time.
 
 audit_database = Audit Database
 lockout_enabled = Lockout Enabled
