--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
@@ -4368,6 +4368,9 @@ Signed = \u041f\u043e\u0434\u043f\u0438\u0441\u0430\u043d\u043e
 #date_time_of_server =  Date/Time of Server
 #date_time_of_server = Серверная дата и время
 date_time_of_server = \u0421\u0435\u0440\u0432\u0435\u0440\u043d\u0430\u044f \u0434\u0430\u0442\u0430 \u0438 \u0432\u0440\u0435\u043c\u044f
+#local_date_time = Local Date/Time
+#local_date_time = Локальная дата/время
+local_date_time = \u041b\u043e\u043a\u0430\u043b\u044c\u043d\u0430\u044f \u0434\u0430\u0442\u0430\u002f\u0432\u0440\u0435\u043c\u044f
 #hidden_crf = Hide CRF
 #hidden_crf = Скрыть ИРК
 hidden_crf = \u0421\u043a\u0440\u044b\u0442\u044c \u0418\u0420\u041a
@@ -4392,6 +4395,9 @@ item_status = \u0421\u0442\u0430\u0442\u0443\u0441 \u043f\u0435\u0440\u0435\u043
 #server_time_info =  Note that the 'Login Attempt Date field' is based on server time.  The current server time is
 #server_time_info = Обратите внимание, что в поле "дата попытки входа в систему" основана на серверном времени. В настоящий момент серверное время:
 server_time_info = \u041e\u0431\u0440\u0430\u0442\u0438\u0442\u0435 \u0432\u043d\u0438\u043c\u0430\u043d\u0438\u0435\u002c \u0447\u0442\u043e \u0432 \u043f\u043e\u043b\u0435 "\u0434\u0430\u0442\u0430 \u043f\u043e\u043f\u044b\u0442\u043a\u0438 \u0432\u0445\u043e\u0434\u0430 \u0432 \u0441\u0438\u0441\u0442\u0435\u043c\u0443" \u043e\u0441\u043d\u043e\u0432\u0430\u043d\u0430 \u043d\u0430 \u0441\u0435\u0440\u0432\u0435\u0440\u043d\u043e\u043c \u0432\u0440\u0435\u043c\u0435\u043d\u0438\u002e \u0412 \u043d\u0430\u0441\u0442\u043e\u044f\u0449\u0438\u0439 \u043c\u043e\u043c\u0435\u043d\u0442 \u0441\u0435\u0440\u0432\u0435\u0440\u043d\u043e\u0435 \u0432\u0440\u0435\u043c\u044f\u003a
+#local_time_info = Note that the 'Login Attempt Date field' is based on your local time.
+#local_time_info = Обратите внимание, что поле "дата попытки входа в систему" отображает Ваше локальное время.
+local_time_info = \u041e\u0431\u0440\u0430\u0442\u0438\u0442\u0435 \u0432\u043d\u0438\u043c\u0430\u043d\u0438\u0435\u002c \u0447\u0442\u043e \u043f\u043e\u043b\u0435 \u0022\u0434\u0430\u0442\u0430 \u043f\u043e\u043f\u044b\u0442\u043a\u0438 \u0432\u0445\u043e\u0434\u0430 \u0432 \u0441\u0438\u0441\u0442\u0435\u043c\u0443\u0022 \u043e\u0442\u043e\u0431\u0440\u0430\u0436\u0430\u0435\u0442 \u0412\u0430\u0448\u0435 \u043b\u043e\u043a\u0430\u043b\u044c\u043d\u043e\u0435 \u0432\u0440\u0435\u043c\u044f\u002e
 #audit_database =  Audit Database
 #audit_database = Аудит базы данных
 audit_database = \u0410\u0443\u0434\u0438\u0442 \u0431\u0430\u0437\u044b \u0434\u0430\u043d\u043d\u044b\u0445
