Fixed #1796: Event API: Create Event Submitted by: sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2762 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/exceptions_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/exceptions_en.properties
@@ -477,6 +477,13 @@ rest.authentication.missingUsername=Username parameter is missing
 rest.authentication.missingPassword=Password parameter is missing
 rest.authentication.missingStudyName=Studyname parameter is missing
 rest.authentication.http404=Service unavailable
+rest.studyEventDefinition.wrongType=Wrong type
+rest.wrongScope=It's impossible to execute this method on the current scope.
+rest.studyeventdefinitionservice.createstudyeventdefinition.missing.name=Name parameter is missing
+rest.studyeventdefinitionservice.createstudyeventdefinition.missing.type=Type parameter is missing
+rest.studyeventdefinitionservice.createstudyeventdefinition.empty.name=Name parameter is empty
+rest.studyeventdefinitionservice.createstudyeventdefinition.empty.type=Type parameter is empty
+rest.wrongParameterType=Parameter ''{0}'' should be {1}
 
 there_was_an_unspecified_error = There was an unspecified error with your creation, please contact an administrator.
 not_found_in_the_db = Not found in the db
