Fixes #2278: Add study subjects table for custom study/site reports. Submitted by Vitaly
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2786 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
@@ -7718,3 +7718,9 @@ print_site_casebooks = \u041a\u043e\u043c\u043f\u043b\u0435\u043a\u0442 \u0418\u
 #time_zone = Time zone
 #time_zone = Часовой пояс
 time_zone = \u0427\u0430\u0441\u043e\u0432\u043e\u0439 \u043f\u043e\u044f\u0441
+#casebooks = Casebooks
+#casebooks = ИРК отчеты
+casebooks = \u0418\u0420\u041a \u043e\u0442\u0447\u0435\u0442\u044b
+#generate_casebooks = Generate Casebooks
+#generate_casebooks = Сгенерировать отчеты
+generate_casebooks = \u0421\u0433\u0435\u043d\u0435\u0440\u0438\u0440\u043e\u0432\u0430\u0442\u044c \u043e\u0442\u0447\u0435\u0442\u044b
