--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -4049,3 +4049,5 @@ after_data_was_reassign = after data was reassigned from current version.
 print_site_casebooks = Print Site Casebooks
 
 time_zone = Time zone
+casebooks = Casebooks
+generate_casebooks = Generate Casebooks
